--- a/src/Pages/Gallery/Gallery.module.scss
+++ b/src/Pages/Gallery/Gallery.module.scss
@@ -10,7 +10,7 @@
     margin: auto;
     margin-top: 3rem;
 
-    font-family: "Philosopher";
+    font-family: var(--posua-font-1);
     font-style: normal;
     font-weight: 400;
     font-size: 1.8rem;
