--- a/src/Pages/Home/Borhomthuri.module.scss
+++ b/src/Pages/Home/Borhomthuri.module.scss
@@ -13,7 +13,7 @@
   margin: auto;
   margin-top: 1rem;
 
-  font-family: "Philosopher";
+  font-family: var(--posua-font-1);
   font-style: normal;
   font-weight: 400;
   font-size: 1.8rem;
