--- a/src/Components/CarouselCard/CarouselCard.module.scss
+++ b/src/Components/CarouselCard/CarouselCard.module.scss
@@ -59,11 +59,7 @@
       font-size: var(--carousel-content-font-size);
       max-width: 80%;
       max-height: 60%;
-      overflow-y: scroll;
-      &::-webkit-scrollbar {
-        display: none;
-      }
-      scrollbar-width: 10px;
+      overflow-y: hidden;
     }
   }
   &:hover .heading {
