--- a/src/Components/Footer/Footer.module.scss
+++ b/src/Components/Footer/Footer.module.scss
@@ -1,5 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Philosopher&display=swap");
-
 .footer {
   background-image: url("https://res.cloudinary.com/dp92qug2f/image/upload/c_scale,w_960,f_auto,fl_lossy/v1677669056/posua/footer_hkjaxr.png");
   padding-top: 2.5vw;
@@ -20,7 +18,7 @@
       text-align: center;
       max-width: 230px;
       li {
-        font-family: "philosopher" !important;
+        font-family: var(--posua-font-1) !important;
         line-height: 1.4rem;
         font-size: 1.1rem;
         a {
