--- a/src/Components/Team/TeamMembers/TeamMemStructure.module.scss
+++ b/src/Components/Team/TeamMembers/TeamMemStructure.module.scss
@@ -48,7 +48,7 @@
       bottom: 5.2rem;
       line-height: 1.25rem;
       font-weight: 600;
-      font-family: "Philosopher", sans-serif;
+      font-family: var(--posua-font-1), sans-serif;
     }
   }
 }
