--- a/src/Components/Team/TeamMembers/TeamMember.module.scss
+++ b/src/Components/Team/TeamMembers/TeamMember.module.scss
@@ -6,7 +6,7 @@
   background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
-  font-family: "Philosopher";
+  font-family: var(--posua-font-1);
   font-weight: 700;
 }
 
