--- a/src/Pages/Artists/Artists.module.scss
+++ b/src/Pages/Artists/Artists.module.scss
@@ -44,10 +44,11 @@
     text-align: center;
     font-size: 5vw;
     margin: 0;
-    font-family: "Philosopher", sans-serif;
+    font-family: var(--posua-font-1), sans-serif;
     font-weight: 700;
     background: linear-gradient(91.92deg, #7a2400 0.1%, #ebb02a 100.1%);
     background-size: 100%;
+    background-clip: text;
     -webkit-background-clip: text;
     -moz-background-clip: text;
     -webkit-text-fill-color: transparent;
@@ -258,10 +259,11 @@
   margin: 0;
   padding: 0;
   font-size: 5.2vw;
-  font-family: "Philosopher", sans-serif;
+  font-family: var(--posua-font-1), sans-serif;
   font-weight: 700;
   background-image: linear-gradient(91.92deg, #7a2400 0.1%, #ebb02a 100.1%);
   background-size: 100%;
+  background-clip: text;
   -webkit-background-clip: text;
   -moz-background-clip: text;
   -webkit-text-fill-color: transparent;
@@ -357,7 +359,7 @@
 
 .artistname {
   font-size: 2.5vw;
-  font-family: "Philosopher", sans-serif;
+  font-family: var(--posua-font-1), sans-serif;
   font-weight: 400;
   color: rgba(255, 255, 255, 1);
 }
