--- a/src/Pages/Home/AboutUs.module.scss
+++ b/src/Pages/Home/AboutUs.module.scss
@@ -50,7 +50,7 @@
   flex-direction: column;
 }
 .AboutUsHeader {
-  font-family: "Philosopher", sans-serif;
+  font-family: var(--posua-font-1), sans-serif;
   font-size: 9vmin;
   font-weight: bold;
   margin-top: -4rem;
