--- a/src/index.scss
+++ b/src/index.scss
@@ -11,6 +11,20 @@
   --paragraph-2-text-weight: 300;
 }
 
+body::-webkit-scrollbar {
+  width: 10px;
+}
+
+body::-webkit-scrollbar-track {
+  border-radius: 10px;
+}
+
+body::-webkit-scrollbar-thumb {
+  background: rgb(102,72,2);
+  background: radial-gradient(circle, rgba(102,72,2,1) 0%, rgba(138,15,15,1) 100%);
+  border-radius: 10px;
+}
+
 * {
   margin: 0;
   padding: 0;
