ADD: colorful scrollbar

--- a/src/index.scss
+++ b/src/index.scss
@@ -20,3 +20,18 @@
   scroll-behavior: smooth;
   -webkit-tap-highlight-color: transparent;
 }
+
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: rgb(102,72,2);
+  background: radial-gradient(circle, rgba(102,72,2,1) 0%, rgba(138,15,15,1) 100%);
+  border-radius: 10px;
+}
