--- a/src/Pages/Home/AboutUs.module.scss
+++ b/src/Pages/Home/AboutUs.module.scss
@@ -62,6 +62,7 @@
   width: fit-content;
   height: 100%;
   font-size: 2.5vmin;
+  color: #161515;
 }
 @media screen and (max-width: 600px) {
   .cameraWrap {
