--- a/src/Components/Navbar/Navbar.module.scss
+++ b/src/Components/Navbar/Navbar.module.scss
@@ -116,7 +116,7 @@
   height: 5px;
   margin: 5px;
   border-radius: 10px;
-  background: linear-gradient(to right, #9d5018, #ffa500);
+  background: linear-gradient(to right, #c50000, white, #c50000);
   transition: all 0.2s ease;
 }
 
