--- a/src/Pages/Home/AboutUs.module.scss
+++ b/src/Pages/Home/AboutUs.module.scss
@@ -40,8 +40,8 @@
   max-height: 100%;
 }
 .AboutUsContent {
-  padding: 20% 16% 35% 19.5%;
-  text-align: center;
+  padding: 20% 16% 35% 18.8%;
+  text-align: justify;
   width: 90%;
   gap: 1rem;
   display: flex;
@@ -62,7 +62,7 @@
   width: fit-content;
   height: 100%;
   font-size: 2.5vmin;
-  color: #161515;
+  color:   #161515;
 }
 @media screen and (max-width: 600px) {
   .cameraWrap {
