Responsive issue fixed

--- a/src/Components/Team/TeamMembers/TeamMemStructure.module.scss
+++ b/src/Components/Team/TeamMembers/TeamMemStructure.module.scss
@@ -1,10 +1,28 @@
-.containerMemStructure {
-  display: flex;
-  position: static;
+#satyik_da{
+  grid-column-start: 1;
+    grid-column-end: 3;
+  }
+
+  .memEven{
+    grid-column-start: 1;
+    grid-column-end: 2;
+  }
+  .memOdd{
+    grid-column-start: 2;
+    grid-column-end: 3;
+  }
+  
+  .containerMemStructure {
+    display: flex;
+    position: relative;
+    overflow: hidden;
+
+
 
   .teamMemberGrid {
     align-items: center;
     // position: relative;
+    overflow: hidden;
     height: 580px;
   }
 
@@ -42,7 +60,11 @@
     justify-content: center;
     position: relative;
     bottom: 360px;
-
+    
+    .gamusaImg{
+      transform: rotate(.5deg);
+    }
+    
     .gamusaWriting {
       position: relative;
       bottom: 5.2rem;
@@ -53,7 +75,15 @@
   }
 }
 
-@media (max-width: 420px) {
+@media (max-width: 460px) {
+  .memEven{
+    grid-column-start: 1;
+    grid-column-end: 2;
+  }
+  .memOdd{
+    grid-column-start: 1;
+    grid-column-end: 2;
+  }
   .containerMemStructure {
     margin-top: -6rem;
   }
@@ -67,6 +97,6 @@
     overflow: hidden;
   }
   // .LottiesSVG{
-  //   transform: scale(0.8);
-  // }
+    //   transform: scale(0.8);
+    // }
 }
