--- a/src/Components/Team/TeamMembers/TeamMember.module.scss
+++ b/src/Components/Team/TeamMembers/TeamMember.module.scss
@@ -1,19 +1,8 @@
-.Designation {
-  margin-bottom: 1.6rem;
-  text-align: center;
-  font-size: 3.6rem;
-  background-image: linear-gradient(90deg, #371000 14.1%, #ffbf2a 82.1%);
-  background-clip: text;
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  font-family: "Philosopher";
-  font-weight: 700;
-}
-
 .containerMember {
   margin-left: 10em;
   margin-right: 10em;
   // position: relative;
+  overflow: hidden;
 }
 
 .wrapper {
@@ -25,7 +14,7 @@
   position: relative;
 }
 
-@media (max-width: 420px) {
+@media (max-width: 430px) {
   .containerMember {
     margin-left: 0;
     margin-right: 0;
@@ -33,5 +22,6 @@
   .wrapper {
     justify-content: center;
     justify-items: center;
+    padding-top: 3rem;
   }
 }
