--- a/src/Components/Team/TeamWiseSlider/ImageSlider.module.scss
+++ b/src/Components/Team/TeamWiseSlider/ImageSlider.module.scss
@@ -1,5 +1,5 @@
 .imgslider {
-  margin-inline: 5.5vw;
+  margin-inline: 6vw;
   padding-bottom: 6rem;
 
   .Designation {
@@ -31,8 +31,12 @@
       .TextForRotation {
         opacity: 1;
       }
+      .Name{
+        opacity: 1;
+      }
       .Images {
         transform: scale(1.04);
+        height: 380px;
       }
     }
       // .Card {
@@ -54,13 +58,23 @@
       top: 16%;
       transition: all 0.6s ease-in-out;
     }
+    .Name{
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-size: 1.8rem;
+      position: absolute;
+      bottom: 2.4rem;
+      opacity: 0;
+      transition: all 600ms ease-in-out;      
+    }
     .TextForRotation {
       display: flex;
       justify-content: center;
       align-items: center;
-      font-size: 2rem;
+      font-size: 1.2rem;
       position: absolute;
-      bottom: 0.5rem;
+      bottom: 0.7rem;
       opacity: 0;
       transition: all 600ms ease-in-out;
     }
@@ -74,8 +88,14 @@
   }
   .Images {
     width: 200px !important;
+    height: 310px !important;
+  }
+  .Name{
+    font-size: 1rem !important;
+    opacity: 1 !important;    
   }
   .TextForRotation {
+    font-size: 1rem !important;
     opacity: 1 !important;
   }
   .Designation {
