UPD:uniform padding top in all pages

--- a/src/Pages/Artists/Artists.module.scss
+++ b/src/Pages/Artists/Artists.module.scss
@@ -663,6 +663,11 @@
 .indithree{
   margin: 15vw auto 0 auto!important;
 }
+
+.headBox{
+  padding-top: 5vw;
+}
+
 @media only screen and (max-width: 600px) {
   .artistsmain {
     padding-top: 30vw;
@@ -693,7 +698,7 @@
 
 @media only screen and (max-width: 660px) {
   .headBox {
-    padding-top: 15%;
+    padding-top: 18vw;
     margin-bottom: -10%;
   }
 
