--- a/src/Components/Team/TeamPosuaWording/TeamPosuaWord.module.scss
+++ b/src/Components/Team/TeamPosuaWording/TeamPosuaWord.module.scss
@@ -2,7 +2,7 @@
   display: flex;
   text-align: center;
   justify-content: space-between;
-  padding-top: 5rem;
+  padding-top: 9vw;
 }
 
 .containerflower {
@@ -33,8 +33,7 @@
 .WordingTeamPosua {
   h1 {
     display: flex;
-
-    font-size: 5.2vw;
+    font-size: 6vw;
     font-family: var(--posua-font-1), sans-serif;
     font-weight: 700;
     background-image: linear-gradient(90deg, #371000 0.1%, #f3b526 90.1%);
@@ -95,6 +94,12 @@
 @media only screen and (max-width: 1196px) {
   .containerflower {
     display: none;
+  }
+}
+
+@media screen and (max-width:660px){
+  .containerTeamWordMukha{
+    padding-top: 20vw;
   }
 }
 
