UPD: Carousel Card Content

--- a/src/Components/CarouselCard/CarouselCard.module.scss
+++ b/src/Components/CarouselCard/CarouselCard.module.scss
@@ -45,6 +45,7 @@
       align-items: center;
       background: linear-gradient(to right, #7a2400, #ebb02a);
       font-weight: 700;
+      white-space: nowrap;
       clip: text;
       background-clip: text;
       -webkit-background-clip: text;
