--- a/src/Pages/Gallery/Gallery.module.scss
+++ b/src/Pages/Gallery/Gallery.module.scss
@@ -6,7 +6,7 @@
 
   .para {
     width: 72rem;
-    height: 15rem;
+    // height: 15rem;
     margin: auto;
     margin-top: 3rem;
 
@@ -50,7 +50,7 @@
 
   .faces {
     .face_left {
-      height: 16rem;
+      height: 1rem;
       width: 18rem;
 
       img {
