--- a/src/Components/CarouselButton/CarouselButton.module.scss
+++ b/src/Components/CarouselButton/CarouselButton.module.scss
@@ -1,6 +1,7 @@
 .button {
   padding: 0.8rem 2rem;
   font-size: 1.2rem;
+  cursor: pointer;
   font-weight: 900;
   border-radius: 20px;
   background: linear-gradient(to right, #7a2400, #ebb02a);
