--- a/src/Pages/Home/AboutUs.module.scss
+++ b/src/Pages/Home/AboutUs.module.scss
@@ -86,4 +86,11 @@
     width: 100%;
     height: 100vh;
   }
+
+  .content{
+    // font-size: 2.6vmin;
+    // line-height: 1.3;
+    padding-left: 1.5vw;
+    padding-right: 1.5vw;
+  }
 }
