--- a/src/Pages/Sponsors/Accordion.css
+++ b/src/Pages/Sponsors/Accordion.css
@@ -78,7 +78,7 @@
   color: #161515;
 }
 .accordion-active .content {
-  max-height: 300px;
+  max-height: fit-content;
 }
 
 .img-dhol {
@@ -102,7 +102,8 @@
   }
   .accordion span {
     width: 50%;
-    font-size: 3.5vw;
+    /* font-size: 4.6vw; */
+    font-size: 3.8vw;
   }
 
   .img-dhol {
@@ -112,5 +113,9 @@
 
   .accordion-active .img-dhol {
     transform: scale(1.3) !important;
+  }
+
+  .accordion p {
+    font-size: 0.8rem;
   }
 }
