--- a/src/Components/Hero/Hero.module.scss
+++ b/src/Components/Hero/Hero.module.scss
@@ -37,8 +37,9 @@
     min-height: 100%;
     left: 50%;
     transform: translateX(-50%);
+    animation-delay: 4.5s !important;
   }
-
+  
   .sky {
     // height: 100%;
     // transform: scale(1.4rem);
