--- a/src/Pages/Events/Events.module.scss
+++ b/src/Pages/Events/Events.module.scss
@@ -3,7 +3,7 @@
 }
 
 .main {
-  background-image: url("https://res.cloudinary.com/dp92qug2f/image/upload/v1677668803/posua/bg-artists_tpba1w.jpg");
+  background-image: url("https://res.cloudinary.com/dp92qug2f/image/upload/v1677668803/posua/bg-artists_tpba1w.webp");
   background-size: cover;
   background-repeat: no-repeat;
   overflow: hidden;
