--- a/src/Pages/Gallery/Gallery.module.scss
+++ b/src/Pages/Gallery/Gallery.module.scss
@@ -3,10 +3,9 @@
   background-repeat: no-repeat;
   background-size: cover;
   overflow-x: hidden;
-padding-top: 5vw;
+
   .para {
     width: 72rem;
-    // height: 15rem;
     margin: auto;
     margin-top: 3rem;
 
@@ -50,12 +49,12 @@ padding-top: 5vw;
 
   .faces {
     .face_left {
-      height: 1rem;
       width: 18rem;
 
       img {
-        height: 28rem;
-        width: 20rem;
+        margin-top: -8rem;
+        height: 25rem;
+        width: 15rem;
 
         position: absolute;
         left: 0;
@@ -64,8 +63,9 @@ padding-top: 5vw;
     }
     .face_right {
       img {
-        height: 28rem;
-        width: 20rem;
+        margin-top: -8rem;
+        height: 24rem;
+        width: 15rem;
 
         position: absolute;
         right: 0;
@@ -77,6 +77,10 @@ padding-top: 5vw;
 
 @media only screen and (max-width: 1200px) {
   .container {
+    .header {
+      margin-top: 5rem;
+    }
+
     .para {
       width: 60%;
       font-size: 3vmin;
@@ -85,11 +89,5 @@ padding-top: 5vw;
     .faces {
       display: none;
     }
-  }
-}
-
-@media screen and (max-width:660px){
-  .container{
-    padding-top: 18vw;
   }
 }
