ADD:dhol in title of team page in mobile view

--- a/src/Components/Team/TeamPosuaWording/TeamPosuaWord.module.scss
+++ b/src/Components/Team/TeamPosuaWording/TeamPosuaWord.module.scss
@@ -123,3 +123,13 @@
     }
   }
 }
+ 
+@media screen and (max-width:660px){
+  .center{
+    display: none !important;
+  }
+
+  .containerTeamWordMukha{
+    padding-top: 0;
+  }
+}
