--- a/src/Pages/Home/AboutUs.module.scss
+++ b/src/Pages/Home/AboutUs.module.scss
@@ -69,10 +69,11 @@
     display: none;
   }
   .AboutUsfilm {
+    transform: scale(1.25);
     overflow-x: clip;
     margin-top: 4em;
     width: 100%;
-    height: 100vh;
+    height: 90vh;
     margin-right: 3.5%;
   }
   .AboutUsContent {
@@ -88,6 +89,7 @@
   }
 
   .content{
+    font-size:0.68em;
     // font-size: 2.6vmin;
     // line-height: 1.3;
     padding-left: 1.5vw;
