--- a/src/index.scss
+++ b/src/index.scss
@@ -20,8 +20,8 @@ body::-webkit-scrollbar-track {
 }
 
 body::-webkit-scrollbar-thumb {
-  background: rgb(102,72,2);
-  background: radial-gradient(circle, rgba(102,72,2,1) 0%, rgba(138,15,15,1) 100%);
+  background: rgb(102, 72, 2);
+  background: radial-gradient(circle, rgba(102, 72, 2, 1) 0%, rgba(138, 15, 15, 1) 100%);
   border-radius: 10px;
 }
 
