--- a/src/Components/Team/TeamWiseSlider/ImageSlider.module.scss
+++ b/src/Components/Team/TeamWiseSlider/ImageSlider.module.scss
@@ -31,7 +31,7 @@
       .TextForRotation {
         opacity: 1;
       }
-      .Name{
+      .Name {
         opacity: 1;
       }
       .Images {
@@ -58,7 +58,7 @@
       top: 16%;
       transition: all 0.6s ease-in-out;
     }
-    .Name{
+    .Name {
       display: flex;
       justify-content: center;
       align-items: center;
@@ -66,7 +66,7 @@
       position: absolute;
       bottom: 2.5rem;
       opacity: 0;
-      transition: all 600ms ease-in-out;      
+      transition: all 600ms ease-in-out;
     }
     .TextForRotation {
       display: flex;
@@ -90,12 +90,12 @@
     width: 200px !important;
     height: 300px !important;
   }
-  .Name{
+  .Name {
     font-size: 1rem !important;
-    opacity: 1 !important;    
+    opacity: 1 !important;
   }
   .TextForRotation {
-    font-size: .9rem !important;
+    font-size: 0.9rem !important;
     opacity: 1 !important;
   }
   .Designation {
