--- a/src/Pages/Home/Borhomthuri.module.scss
+++ b/src/Pages/Home/Borhomthuri.module.scss
@@ -1,10 +1,9 @@
 .borhomthuri {
   // width: 100%;
-  h1{
+  h1 {
     font-size: x-large;
   }
 }
-
 
 .para {
   display: flex;
@@ -24,7 +23,6 @@
 
   color: #161515;
 }
-
 
 .maincasette {
   width: 70%;
@@ -62,28 +60,28 @@
       top: 29%;
       width: 23%;
       height: 23%;
-  }
+    }
 
     .pdf2 {
       left: 50%;
       top: 23%;
       width: 27%;
       height: 21%;
-  }
+    }
 
     .pdf3 {
       left: 27%;
       top: 55%;
       width: 24%;
       height: 23%;
-  }
+    }
 
     .pdf4 {
       width: 24%;
       left: 56%;
       top: 51%;
       height: 20%;
-  }
+    }
   }
 
   .casettereelr {
@@ -97,7 +95,6 @@
     position: absolute;
     width: 35%;
     height: 30%;
-
   }
 
   .pdf5 {
@@ -105,35 +102,34 @@
     top: 22%;
     width: 24%;
     height: 26%;
-}
+  }
 
   .pdf6 {
     left: 47%;
     top: 19%;
     width: 23%;
     height: 22%;
-}
+  }
 
   .pdf7 {
     left: 21%;
     top: 51%;
     width: 30%;
     height: 23%;
-}
+  }
 
   .pdf8 {
     width: 24%;
     left: 51%;
     top: 46%;
     height: 22%;
-}
+  }
 }
 
-.casettereell:hover, .casettereelr:hover{
+.casettereell:hover,
+.casettereelr:hover {
   animation-play-state: paused;
 }
-
-
 
 .lreel {
   //     display: grid;
@@ -150,7 +146,6 @@
   //       grid-template-rows: repeat(1, 1fr);
   //     }
   .lreel1 {
-
     transform: rotate(350deg);
     animation: orbit 5s infinite linear;
   }
@@ -164,7 +159,6 @@
   //     .lreel4{
   //         transform: rotate(110deg);
   //     }
-
 }
 
 @keyframes orbit {
@@ -178,7 +172,6 @@
 }
 
 @keyframes rotate1 {
-
   0%,
   0% {
     transform: rotateZ(0);
@@ -190,7 +183,6 @@
 }
 
 @keyframes rotate2 {
-
   0%,
   0% {
     transform: rotateZ(0);
@@ -204,18 +196,16 @@
 @media screen and (max-width: 600px) {
   .para {
     font-size: 1rem;
-line-height: 1.4;
+    line-height: 1.4;
   }
 }
 
 @media screen and (max-width: 400px) {
   .para {
     font-size: 1rem;
-
   }
 
   .maincasette {
     width: 60%;
-
   }
 }
