--- a/src/Pages/Home/Borhomthuri.module.scss
+++ b/src/Pages/Home/Borhomthuri.module.scss
@@ -45,8 +45,7 @@
   }
 
   .casettereell {
-    animation: rotate1 infinite 10s linear forwards;
-
+    animation: rotate1 infinite 15s 1s linear forwards;
     width: 100%;
     left: -40%;
     top: -28%;
@@ -87,7 +86,7 @@
   }
 
   .casettereelr {
-    animation: rotate2 infinite 10s linear forwards;
+    animation: rotate2 infinite 15s linear forwards;
 
     right: -42%;
     top: -28%;
@@ -129,9 +128,9 @@
 }
 }
 
-.casettereell:hover, .casettereelr:hover{
-  animation-play-state: paused;
-}
+// .casettereell:hover, .casettereelr:hover{
+//   animation-play-state: paused;
+// }
 
 
 
