--- a/src/Pages/Artists/Artists.module.scss
+++ b/src/Pages/Artists/Artists.module.scss
@@ -35,7 +35,7 @@
     #93560f 100.1%
   );
   border-image-slice: 1;
-  border-radius: 30px !important;
+  // border-radius: 30px !important;
   padding-bottom: 2.5vw !important;
   &#detailanimate {
     animation: anidetial 1s ease;
