--- a/src/Components/Footer/Footer.module.scss
+++ b/src/Components/Footer/Footer.module.scss
@@ -69,6 +69,9 @@
       ul {
         margin-top: 2vw;
         margin-bottom: 2vw;
+        .contacts {
+          text-align: center;
+        }
       }
     }
   }
