--- a/src/Components/Team/TeamWiseSlider/ImageSlider.module.scss
+++ b/src/Components/Team/TeamWiseSlider/ImageSlider.module.scss
@@ -21,8 +21,8 @@
     justify-content: center;
     align-items: center;
     width: 100%;
-    margin-left: 0.5em;
-    margin-right: 0.5em;
+    // margin-left: 0.5em;
+    // margin-right: 0.5em;
     &:hover {
       .Card {
         // width: 26rem;
