--- a/src/Pages/Teams/Team.module.scss
+++ b/src/Pages/Teams/Team.module.scss
@@ -3,6 +3,7 @@
   background-image: url("https://res.cloudinary.com/dp92qug2f/image/upload/v1677668803/posua/bg-artists_tpba1w.jpg");
   background-repeat: no-repeat;
   background-size: cover;
+  background-position: center;
 }
 .headteam {
   padding-top: 5vw !important;
